# pcc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  codegen.c  codegen.cpp  codegen.hpp  gen_ir.cpp  gen_ir.hpp  main.c  main.cpp  parse.c  parse.cpp  parse.hpp  pcc.h  strings.c  test.sh  tokenize.c  tokenize.cpp  tokenize.hpp  type.c  type.cpp  type.hpp
ir_core/: BasicBlock.cpp  BasicBlock.hpp  BasicBlockParam.hpp  Constant.cpp  Constant.hpp  Dominators.cpp  Dominators.hpp  Function.cpp  Function.hpp  FunctionParam.hpp  GlobalObject.cpp  GlobalObject.hpp  GlobalVariable.cpp  GlobalVariable.hpp  GraphTraits.hpp  IRBuilder.hpp  IRContext.cpp  IRContext.hpp  IRPrinter.cpp  IRPrinter.hpp  Instruction.cpp  Instruction.hpp  Module.cpp  Module.hpp  POTraversal.hpp  RPOTraversal.hpp  Use.hpp  User.hpp  Value.cpp  Value.hpp  symbol_table_list.hpp
iterator/: indirect_iterator.hpp  indirect_iterator_base.hpp  iterator_adaptor.hpp  iterator_adaptor_base.hpp  iterator_core_access.hpp  iterator_facade.hpp  iterator_facade_base.hpp  iterator_range.hpp  to_address.hpp
passes/: dce.cpp  dce.hpp  gvn.cpp  gvn.hpp  mem2reg.cpp  mem2reg.hpp
test/: arith.c  driver.sh  run_test.py  sizeof.c
utils/: ilist.hpp  type_traits.hpp  use_default.hpp  util.hpp
